backend/oneagent-monitor-service/test-uninstrumented-pod-new.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-uninstrumented-new
  namespace: dsa-re-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-uninstrumented-new
  template:
    metadata:
      labels:
        app: test-uninstrumented-new
      annotations:
        dynatrace.com/oneagent-status: "not-attempted"
    spec:
      containers:
      - name: test-app
        image: quay.io/ukhomeofficedigital/alpine:v3.15
        command: ["sleep", "3600"]
        ports:
        - containerPort: 80
